--- a/WDD130-WebFundamentals/wwr/sitePlanRafting.html
+++ b/WDD130-WebFundamentals/wwr/sitePlanRafting.html
@@ -38,7 +38,7 @@
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="/WDD130-WebFundamentals/wwr/images/logo400px.png" alt="KnowingPerthesLogo" />
+    <img src="images/logo400px.png" alt="KnowingPerthesLogo" />
     <hr />
     <h2>Style Guide</h2>
 
