--- a/WDD130-WebFundamentals/wwr/index.html
+++ b/WDD130-WebFundamentals/wwr/index.html
@@ -5,74 +5,80 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <header>
-        <div>
-            <a href="index.html" id="logoLink">
-                <img class= "logo" src="images/logo.png" alt="Dry Oar logo">
-            </a>
-        </div>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="#">Pagina 2</a>
-            <a href="sitePlanRafting.html">Site Plan</a>
-            <a href="contactUs.html">Contact Us</a>
-        </nav>
-    </header>
-
-    <div id="hero">
-        <div id="heroBox">
-            <img id="heroImg" src="images/hero.png" alt="People enjoying rafting">
-        </div>
-        <section id="heroMsg">
-            <h1 class="homeTitle">Have An Adventure</h1>
-            <h4>Make Memorieswith Dry Oar</h4>
-            <div class="buttonBox">
-                <a class="book" href="contactUs.html">Book Now</a>
+    <div id="content">
+        <header>
+            <div>
+                <a href="index.html" id="logo_link">
+                 <img class= "logo" src="images/logo.png" alt="Dry Oar logo">
+                </a>
             </div>
-        </section>
-    </div>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Pagina 2</a>
+                <a href="site_plan_rafting.html">Site Plan</a>
+                <a href="contact_us.html">Contact Us</a>
+            </nav>
+        </header>
 
-    <main class="homeGrid">
-        <section class="riversCard">
-            <img class="cardImg" src="images/rivers.jpg" alt="river in forest">
-            <img class="icon" src="images/riverIcon.png" alt="river icon">
-            <h2>Rivers</h2>
-        </section>
-        <section class="campingCard">
-            <img class="cardImg" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fireIcon.png" alt="fire icon">
-            <h2>Camping</h2>
-        </section>
-        <section class="rapidsCard">
-            <img class="cardImg" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
-            <h2>Rapids</h2>
-        </section>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
-        <section class="msg">
-            <h2>More Than Just The Thrill</h2>
-            <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a class="join" href="rivers.html">Join Us</a>
-        </section>
-    </main>
-
-    <footer>
-        <p>Dry Oar &copy; 2022 - Ayrton Juárez</p>
-        <p><a href="sitePlanRafting.html">Site Plan</a></p>
-        <p><a href="contactUs.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com">
-                <img src="images/facebook.png" alt="fb icon">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.png" alt="instagram icon">
-            </a>
+        <div id="hero">
+            <div id="hero_box">
+             <img id="hero_img" src="images/hero.png" alt="People enjoying rafting">
+            </div>
+            <section id="hero_msg">
+              <h1 class="home_title">Have An Adventure</h1>
+              <h4>Make Memorieswith Dry Oar</h4>
+              <div class="button_box">
+                    <a class="book" href="contact_us.html">Book Now</a>
+              </div>
+         </section>
         </div>
-    </footer>
+
+        <main class="home_grid">
+            <section class="rivers_card">
+                <img class="card_img" src="images/rivers.jpg" alt="river in forest">
+                <img class="icon" src="images/river_icon.png" alt="river icon">
+                <h2>Rivers</h2>
+            </section>
+            <section class="camping_card">
+                <img class="card_img" src="images/camping.jpg" alt="tent in mountains">
+                <img class="icon" src="images/fire_icon.png" alt="fire icon">
+                <h2>Camping</h2>
+            </section>
+            <section class="rapids_card">
+                <img class="card_img" src="images/rapids.jpg" alt="rafting boat">
+                <img class="icon" src="images/oars.png" alt="oars icon">
+                <h2>Rapids</h2>
+            </section>
+
+            <div id="background"></div>
+
+            <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+            <section class="msg">
+                <h2>More Than Just The Thrill</h2>
+                <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+                <a class="join" href="rivers.html">Join Us</a>
+            </section>
+        </main>
+
+        <footer>
+            <p>Dry Oar &copy; 2022 - Ayrton Juárez</p>
+            <p><a href="site_plan_rafting.html">Site Plan</a></p>
+            <p><a href="contact_us.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                    <img src="images/facebook.png" alt="fb icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                    <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                    <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
