--- a/WDD130-WebFundamentals/wwr/index.html
+++ b/WDD130-WebFundamentals/wwr/index.html
@@ -6,20 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
     <link rel="stylesheet" href="styles/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="content">
         <header>
             <div>
-                <a href="index.html" id="logo_link">
+                <a href="index.html" id="logo_link" target="_blank">
                  <img class= "logo" src="images/logo.png" alt="Dry Oar logo">
                 </a>
             </div>
             <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Pagina 2</a>
-                <a href="site_plan_rafting.html">Site Plan</a>
-                <a href="contact_us.html">Contact Us</a>
+                <a href="index.html" target="_blank">Home</a>
+                <a href="#" target="_blank">Pagina 2</a>
+                <a href="site_plan_rafting.html" target="_blank">Site Plan</a>
+                <a href="contact_us.html" target="_blank">Contact Us</a>
             </nav>
         </header>
 
@@ -29,7 +30,7 @@
             </div>
             <section id="hero_msg">
               <h1 class="home_title">Have An Adventure</h1>
-              <h4>Make Memorieswith Dry Oar</h4>
+              <h4>Make Memories with Dry Oar</h4>
               <div class="button_box">
                     <a class="book" href="contact_us.html">Book Now</a>
               </div>
