--- a/WDD130-WebFundamentals/wwr/site_plan_rafting.html
+++ b/WDD130-WebFundamentals/wwr/site_plan_rafting.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8" />
   <title>Site Plan</title>
   <link type="text/css" rel="stylesheet" href="styles/site_plan_rafting.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Roboto&display=swap" rel="stylesheet">
 </head>
 
 <body>
