--- a/WDD130-WebFundamentals/knowingperthes/site-plan.html
+++ b/WDD130-WebFundamentals/knowingperthes/site-plan.html
@@ -76,7 +76,7 @@
         Heading Font: Saira  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Roboto]  <!-- change this -->
+        Paragraph Font: Roboto  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -99,8 +99,8 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">My Story</a>
+        <a href="#">Who is Dr. Perthes?</a>
       </nav>
       <hr>
       <h2>
@@ -111,10 +111,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          My Story <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Who is Dr. Perthes?  <!-- change this -->
         </div>
 
         <div class="top">
@@ -136,29 +136,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        2.	If you need to investigate this disease, on this page, we will learn everything about Legg-Calvé-Perthes, what are the causes, how many stages are there of the disease, what is the age range in which it is discovered, its symptom.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/lcp.png" alt="Perthes1">
+        <img src="images/per.jpg" alt="Perthes2">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>My Story</h3>
       <p>
-        [Written copy for the Page 2 here]
+        In this section you will find more about the history of the person who created this web page, how was his treatment, you will even find the experience of his relatives.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/family_vector.png" alt="Family">
+        <!-- <img src="#" alt="image for page"> -->
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Who is Dr. Perthes?</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Learn more about the discoverer of this disease, and those who accompanied him in the research process.
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/doc.jpg" alt="Dr. Perthes">
+        <!-- <img src="#" alt="image for page3"> -->
 
       </ul>
       <hr>
