--- a/WDD130-WebFundamentals/knowingperthes/site-plan.html
+++ b/WDD130-WebFundamentals/knowingperthes/site-plan.html
@@ -136,7 +136,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        2.	If you need to investigate this disease, on this page, we will learn everything about Legg-Calvé-Perthes, what are the causes, how many stages are there of the disease, what is the age range in which it is discovered, its symptom.
+        If you need to investigate this disease, on this page, we will learn everything about Legg-Calvé-Perthes, what are the causes, how many stages are there of the disease, what is the age range in which it is discovered, its symptom.
       </p>
       <p>Images for the Home page</p>
         <img src="images/lcp.png" alt="Perthes1">
