--- a/WDD130-WebFundamentals/knowingperthes/site-plan.html
+++ b/WDD130-WebFundamentals/knowingperthes/site-plan.html
@@ -138,6 +138,9 @@
       <p>
         If you need to investigate this disease, on this page, we will learn everything about Legg-Calvé-Perthes, what are the causes, how many stages are there of the disease, what is the age range in which it is discovered, its symptom.
       </p>
+      <p>
+        The causes for which it is contracted are unknown, it is not hereditary, because studies reveal that 5% of patients have a relative with this disease. It is ruled out that it is caused by a direct injury to the hip.
+      </p>
       <p>Images for the Home page</p>
         <img src="images/lcp.png" alt="Perthes1">
         <img src="images/per.jpg" alt="Perthes2">
@@ -147,6 +150,9 @@
       <p>
         In this section you will find more about the history of the person who created this web page, how was his treatment, you will even find the experience of his relatives.
       </p>
+      <p>
+        From a very young age I have liked sports, and here in Argentina, the sport that stands out the most is soccer. It's a sport I was born with, and I've always loved playing it. But later in my life, when I was 9 years old, the discomfort began to appear, movements that I used to do without a problem, now were causing pain. I could define the pain as something cold and sharp.
+      </p>
       <p>Images for the Page 2</p>
         <img src="images/family_vector.png" alt="Family">
         <!-- <img src="#" alt="image for page"> -->
@@ -155,6 +161,9 @@
       <h3>Who is Dr. Perthes?</h3>
       <p>
         Learn more about the discoverer of this disease, and those who accompanied him in the research process.
+      </p>
+      <p>
+        Doctor Georg Clemens Perthes, was a German orthopedic surgeon and a pioneer in X-ray diagnosis. He took the first X-ray of a patient recently diagnosed with this, then new, hip disorder.
       </p>
       <p>Images for the Page 3</p>
         <img src="images/doc.jpg" alt="Dr. Perthes">
