--- a/WDD130-WebFundamentals/knowingperthes/site-plan.html
+++ b/WDD130-WebFundamentals/knowingperthes/site-plan.html
@@ -179,21 +179,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        The "Text" space is where the information will be located.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home_wf.jpg" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>My Story</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        This wireframe will repeat the same nav-bar and footer as the Home. The "Text" space is where the information will be located.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/p2_wf.jpg" alt="My Story wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Who is Dr. Perthes?</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        This wireframe will repeat the same nav-bar and footer as the Home. The image will be included with an oval shape. The "Text" space is where the information will be located.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/p3_wf.jpg" alt="Who is Dr. Perthes? wireframe">
     </main>
   </body>
 
