--- a/WDD130-WebFundamentals/wwr/index.html
+++ b/WDD130-WebFundamentals/wwr/index.html
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <a href="index.html" target="_blank">Home</a>
-                <a href="rivers.html" target="_blank">Rivers/a>
+                <a href="rivers.html" target="_blank">Rivers</a>
                 <a href="site_plan_rafting.html" target="_blank">Site Plan</a>
                 <a href="contact_us.html" target="_blank">Contact Us</a>
             </nav>
