--- a/WDD130-WebFundamentals/wwr/index.html
+++ b/WDD130-WebFundamentals/wwr/index.html
@@ -12,15 +12,15 @@
     <div id="content">
         <header>
             <div>
-                <a href="index.html" id="logo_link" target="_blank">
+                <a href="index.html" id="logo_link">
                  <img class= "logo" src="images/logo.png" alt="Dry Oar logo">
                 </a>
             </div>
             <nav>
-                <a href="index.html" target="_blank">Home</a>
-                <a href="rivers.html" target="_blank">Rivers</a>
-                <a href="site_plan_rafting.html" target="_blank">Site Plan</a>
-                <a href="contact_us.html" target="_blank">Contact Us</a>
+                <a href="index.html">Home</a>
+                <a href="rivers.html">Rivers</a>
+                <a href="site_plan_rafting.html">Site Plan</a>
+                <a href="contact_us.html">Contact Us</a>
             </nav>
         </header>
 
