--- a/WDD130-WebFundamentals/knowingperthes/contact_us.html
+++ b/WDD130-WebFundamentals/knowingperthes/contact_us.html
@@ -133,7 +133,7 @@ button {
       
         <footer>
           <p>Knowing Perthes &copy; 2022 - Ayrton Juárez</p>
-          <p><a href="site_plan_rafting.html">Site Plan</a></p>
+          <p><a href="site-plan.html">Site Plan</a></p>
           <p><a href="contact_us.html">Contact Us</a></p>
           <div class="social">
               <a href="https://facebook.com" target="_blank">
