--- a/WDD130-WebFundamentals/knowingperthes/index.html
+++ b/WDD130-WebFundamentals/knowingperthes/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowing Perthes - Home</title>
-
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Saira+Extra+Condensed&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Saira&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -24,22 +24,23 @@
     </header>
 
     <main>
-        <div>
-            <h1>Leg - Calvé - Perthes Information</h1>
-            <img src="images/perthes2.png" alt="Perthes">
-            <p>
-                The causes for which it is contracted are unknown, it is not hereditary, because studies reveal that 5% of patients have a relative with this disease. It is ruled out that it is caused by a direct injury to the hip.
-                Symptoms usually begin to be seen between the ages of 2 and 15. Boys are more likely to be affected than girls.
-                The diagnosis of Perthes disease requires a careful history, physical examination, and x-rays. Since these symptoms and signs are not specific to the disease, x-rays are required to confirm the presence of Perthes. Since Perthes is a diagnosis of exclusion, other childhood hip conditions that may mimic Perthes disease must be excluded.
-            </p>
+        <h1 class="title">Leg - Calvé - Perthes Information</h1>
+
+        <div class="first">
+            <img class="img1" src="images/perthes2.png" alt="Perthes">
+            <div class="txt1">
+                <p> The causes for which it is contracted are unknown, it is not hereditary, because studies reveal that 5% of patients have a relative with this disease. It is ruled out that it is caused by a direct injury to the hip. </p>
+                <p> Symptoms usually begin to be seen between the ages of 2 and 15. Boys are more likely to be affected than girls.</p>
+                <p> The diagnosis of Perthes disease requires a careful history, physical examination, and x-rays. Since these symptoms and signs are not specific to the disease, x-rays are required to confirm the presence of Perthes. Since Perthes is a diagnosis of exclusion, other childhood hip conditions that may mimic Perthes disease must be excluded.</p>
+            </div>
         </div>
 
         <!-- This img will have 100% width -->
         <div>
-            <img src="images/lcp.png" alt="Differet types">
+            <img id="bann" src="images/lcp.png" alt="Differet types">
         </div>
 
-        <div>
+        <div class="second">
             <h2>SYMPTOM:</h2>
             <p>
                 Pain and lameness are two common symptoms and these start gradually. Pain in the thighs or knees may also be experienced, delaying proper diagnosis.
@@ -48,7 +49,7 @@
             <p>
                 Perthes disease occurs when the arteries that supply blood to the base of the hip are damaged or blocked. Inadequate blood supply can cause the femoral head to atrophy and die. Without the femoral head, the hip socket fails, resulting in pain and loss of mobility.
             </p>
-            <img src="images/perthes1.jpg" alt="Perthes">
+            <img class="img2" src="images/perthes1.jpg" alt="Perthes">
 
         </div>
 
