--- a/WDD130-WebFundamentals/knowingperthes/index.html
+++ b/WDD130-WebFundamentals/knowingperthes/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Saira&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <div>
             <a href="index.html" id="logo_link">
              <img class= "logo" src="images/logo100px.png" alt="Dry Oar logo">
