--- a/WDD130-WebFundamentals/knowingperthes/my_story.html
+++ b/WDD130-WebFundamentals/knowingperthes/my_story.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Knowing Perthes - Home</title>
-
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Saira&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Saira+Extra+Condensed&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header class="navbar">
         <div>
             <a href="index.html" id="logo_link">
              <img class= "logo" src="images/logo100px.png" alt="Dry Oar logo">
@@ -24,28 +25,27 @@
     </header>
     
     <main>
-        <h1>My Story</h1>
-        <div>
-            <img src="images/my_story1.jpeg" alt="My Story">
-        </div>
-        <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non accusamus, quidem nisi atque sunt suscipit maxime quibusdam explicabo cumque dolore asperiores adipisci dignissimos quia molestiae ipsa architecto neque consequatur labore.
-            Rerum voluptates mollitia repellendus aperiam quaerat porro, facere laboriosam quasi inventore, accusantium, perferendis dolores. Eos, laborum quasi deleniti omnis iure, dolorum id cum quibusdam deserunt alias tempore, in temporibus? Dolorum.
-            Repudiandae laudantium explicabo nisi quae eos minima cupiditate molestias, illo cumque quam id dolores ullam nulla illum itaque temporibus doloremque ex qui at animi! Saepe omnis quam nemo doloribus labore!
-            Aliquam ratione temporibus dolore fugiat obcaecati exercitationem praesentium sed blanditiis, molestiae fuga hic totam corrupti vitae qui, libero sit ullam debitis, esse quidem veritatis consequuntur magnam ducimus velit cum. Libero!
-            Odit, doloremque veniam. Et nisi voluptate ratione incidunt distinctio in placeat molestias, ut veritatis earum, harum impedit dolor? Eius commodi beatae a deleniti consequatur vitae laboriosam tenetur eum molestiae alias!
-        </p>
+        <h1 class="title">My Story</h1>
 
-        <div>
+        <div class="first_ms">
+            <img class="img1_ms" src="images/my_story1.jpeg" alt="My Story">
+            <div class="txt1">
+                <p> Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non accusamus, quidem nisi atque sunt suscipit maxime quibusdam explicabo cumque dolore asperiores adipisci dignissimos quia molestiae ipsa architecto neque consequatur labore.<p>
+                <p>Rerum voluptates mollitia repellendus aperiam quaerat porro, facere laboriosam quasi inventore, accusantium, perferendis dolores. Eos, laborum quasi deleniti omnis iure, dolorum id cum quibusdam deserunt alias tempore, in temporibus? Dolorum.</p>
+                <p> Repudiandae laudantium explicabo nisi quae eos minima cupiditate molestias, illo cumque quam id dolores ullam nulla illum itaque temporibus doloremque ex qui at animi! Saepe omnis quam nemo doloribus labore!</p>
+                <p> Aliquam ratione temporibus dolore fugiat obcaecati exercitationem praesentium sed blanditiis, molestiae fuga hic totam corrupti vitae qui, libero sit ullam debitis, esse quidem veritatis consequuntur magnam ducimus velit cum. Libero!</p>
+                <p> Odit, doloremque veniam. Et nisi voluptate ratione incidunt distinctio in placeat molestias, ut veritatis earum, harum impedit dolor? Eius commodi beatae a deleniti consequatur vitae laboriosam tenetur eum molestiae alias!</p>
+            </div>
+        </div>
+
+        <div class="second_ms">
             <h2>My family</h2>
-            <img src="images/my_story2.jpeg" alt="My family">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, repellat in? Vel facere molestiae eligendi animi hic culpa possimus. Culpa ipsum qui est nostrum consequuntur laborum, expedita enim officia quod.
-                Quia nostrum rerum nihil, tempora excepturi reprehenderit quam cupiditate consectetur eos totam. Accusamus, est? Perspiciatis ratione rem in culpa praesentium, consequuntur commodi minima molestiae inventore ipsa, odit illo nostrum facilis?
-                Similique quia recusandae repellat illum quaerat expedita sed perspiciatis sit dolorum? Non aliquid cupiditate cum quasi. Maiores exercitationem, quis placeat ex, laudantium, commodi illum voluptate adipisci voluptas natus ad dolores!
-                Minus officiis temporibus modi labore, numquam, voluptas fuga hic eos libero nemo atque neque, ut minima facilis distinctio odit corrupti laborum illo iure deserunt vel autem maxime dolores! Possimus, excepturi!
-                Assumenda, excepturi nam illo reiciendis magnam impedit, incidunt placeat asperiores nesciunt quisquam deleniti, molestias recusandae sint modi? Nostrum doloribus, ducimus voluptates ipsam, nesciunt vitae animi suscipit, omnis qui culpa eius.
-            </p>
+            <img class="img2_ms" src="images/my_story2.jpeg" alt="My family">
+            <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, impedit quam expedita aut, sint nam libero quidem natus pariatur est cumque necessitatibus aspernatur officia aliquam. Dolor quibusdam dolorem ipsa id?</p>
+            <p> Sapiente soluta mollitia earum tempore, temporibus id magnam blanditiis, quo dicta placeat doloribus enim culpa, quidem harum rem debitis ut aliquid nesciunt odit vel dolor odio hic natus. Maxime, sed!</p>
+            <p> Recusandae tenetur suscipit ducimus animi! Incidunt obcaecati earum soluta corrupti, possimus expedita fuga! Atque, cupiditate rem. Aperiam ipsa, fuga voluptatum voluptatibus nulla rem, dolorum, laudantium qui nesciunt tempore cum facere!</p>
+            <p> Ullam provident natus architecto nihil! Exercitationem accusantium accusamus amet voluptatum sit quo nostrum doloribus tempore odit saepe dolorum vero consequatur atque eligendi aut, modi, quasi fuga architecto fugiat, minus asperiores!</p>
+            <p> Minus, aspernatur? Nihil vitae aut animi placeat assumenda officiis in rem culpa ducimus, vero, explicabo eum sunt doloremque autem odit a sapiente tempora. Officiis sit architecto sequi deserunt reprehenderit provident.</p>
         </div>
     </main>
 
