Edition of the second sub page and Contact us

--- a/WDD130-WebFundamentals/knowingperthes/contact_us.html
+++ b/WDD130-WebFundamentals/knowingperthes/contact_us.html
@@ -5,12 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link type="text/css" rel="stylesheet" href="styles/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Saira&display=swap" rel="stylesheet">
+
     <style>
         form {
   /* Center the form on the page */
   margin: 0 auto;
+  margin-top: 130px;
+  margin-bottom: 25px;
   width: 400px;
   /* Form outline */
   padding: 1em;
@@ -92,8 +95,8 @@ button {
 </head>
 
 <body>
-    <div id="content">
-      <header>
+
+      <header class="navbar">
         <div>
             <a href="index.html" id="logo_link">
              <img class= "logo" src="images/logo100px.png" alt="Dry Oar logo">
@@ -147,7 +150,6 @@ button {
               </a>
           </div>
       </footer>
-    </div>
 </body>
 <script>
     // get the feedback div element so we can do something with it.
