--- a/WDD130-WebFundamentals/knowingperthes/my_story.html
+++ b/WDD130-WebFundamentals/knowingperthes/my_story.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Knowing Perthes - Home</title>
+    <title>Knowing Perthes - My Story</title>
     <link type="text/css" rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&family=Saira&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Saira+Extra+Condensed&display=swap" rel="stylesheet">
