Subpage second img

--- a/WDD130-WebFundamentals/knowingperthes/dr_perthes.html
+++ b/WDD130-WebFundamentals/knowingperthes/dr_perthes.html
@@ -34,7 +34,7 @@
                 <p>From 1900 to 1901 he went to China in the port of Tsingtao as a surgeon with the German army, there he carried out a radiological study of the forced deformity in the feet of Chinese women.</p>
                 <p>Perthes described the effect of X-rays on epithelial cell growth as well as its destructive effect on warts, skin cancer, and metastatic breast cancer. He also described the effect on plant cells and on the chromatin in their nucleus. He used X-rays as a post-surgery treatment for breast carcinoma, which is why he is considered a pioneer of radiotherapy.</p>
             </div>
-            <img src="images/per.jpg" alt="Perthes">
+            <img class="img2" src="images/per.jpg" alt="Perthes">
         </div>
     </main>
 
